// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component sanity matches default snapshot 1`] = `
.c0 {
  color: #4E3FCE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  color: #3F3D4B;
  margin-left: 4px;
  margin-right: 8px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-align: left;
  color: #3F3D4B;
  margin-left: 4px;
  margin-right: 8px;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c1 > input {
  position: relative;
  display: block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 1.5rem;
  width: 1.5rem;
  margin: 0;
}

.c1 > svg {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
  fill: #CCC;
}

.c1 > svg[name='checked'] {
  display: none;
  z-index: 1;
  fill: #4E3FCE;
}

.c1 > input:checked ~ svg[name='checked'] {
  display: block;
}

<label
  class="c0"
  color="primary"
  display="flex"
  opacity="1"
>
  <div
    class="c1"
  >
    <input
      color="primary"
      theme="[object Object]"
      type="checkbox"
    />
    <svg
      class=""
      fill="currentcolor"
      height="24"
      name="checked"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <svg
      class=""
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    class="c2"
    color="copyColor"
    font-family="sansSerif"
    font-size="1"
    font-weight="3"
  />
</label>
`;

exports[`Radio component sanity matches themed snapshot 1`] = `
.c1 {
  color: #4E3FCE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  color: #3F3D4B;
  margin-left: 4px;
  margin-right: 8px;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;
  text-align: left;
  color: #3F3D4B;
  margin-left: 4px;
  margin-right: 8px;
}

.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
}

.c2 {
  position: relative;
  display: inline-block;
}

.c2 > input {
  position: relative;
  display: block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 1.5rem;
  width: 1.5rem;
  margin: 0;
}

.c2 > svg {
  position: absolute;
  z-index: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
  fill: #CCC;
}

.c2 > svg[name='checked'] {
  display: none;
  z-index: 1;
  fill: #4E3FCE;
}

.c2 > input:checked ~ svg[name='checked'] {
  display: block;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <label
    class="c1"
    color="primary"
    display="flex"
    opacity="1"
  >
    <div
      class="c2"
    >
      <input
        color="primary"
        theme="[object Object]"
        type="checkbox"
      />
      <svg
        class=""
        fill="currentcolor"
        height="24"
        name="checked"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        class=""
        fill="currentcolor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
    <div
      class="c3"
      color="copyColor"
      font-family="sansSerif"
      font-size="1"
      font-weight="3"
    />
  </label>
</div>
`;
